@@ -11,6 +11,7 @@ documents those changes that are of interest to users and admins.
     start before doing initial gather.
  -- When changing priority with the multifactor plugin we make sure we update
     the last_job_update variable.
+ -- Fixed sview for gtk < 2.10 to display correct debug level at first.
 
 * Changes in SLURM 2.1.8
 ========================
